--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     },
     "devDependencies": {
         "cross-env": "^6.0.3",
-        "laravel-mix": "^5.0"
+        "laravel-mix": "^5.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "vue": "^2.6.11"
